# quantbox-rs

./: .gitignore  Cargo.toml  add_workspace_dep.py
.github/workflows/: ci.yml
config/: trade_calendar.toml
qb-backtest/: Cargo.toml
qb-core/: Cargo.toml
qb-core/src/: errors.rs  lib.rs
qb-core/src/types/: datetime.rs
qb-data/: Cargo.toml
qb-data/src/: lib.rs
qb-risk/: Cargo.toml
qb-strategies/: Cargo.toml
qb-trading/: Cargo.toml
scripts/: sort_trade_calendar.py
